byteserde_derive/tests/error_scenarios/panic_union.stderr
error: proc-macro derive panicked
 --> tests/error_scenarios/panic_union.rs:3:10
  |
3 | #[derive(ByteSerializeStack)]
  |          ^^^^^^^^^^^^^^^^^^
  |
  = help: message: Only struct types supported, found 'NotSupportedUnion' of type 'union'
